# agentmux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
contrib/: macos-launchagent.plist
docs/: API.md  DEPLOYMENT.md
scripts/: agentmux-submit.sh
src/agentmux/: __init__.py  __main__.py  agent_profile.py  cli.py  config.py  constants.py  server.py  session.py  tmux.py
tests/: conftest.py  test_cli.py  test_config.py  test_server.py  test_session.py  test_tmux.py
